--- a/main-app/src/App.less
+++ b/main-app/src/App.less
@@ -1,6 +1,15 @@
 .container {
   display: flex;
+  height: 100vh;
+  width: 100vw;
+}
+.left {
+  display: flex;
   flex-direction: column;
-  font-size: 30px;
-  color: coral;
+  width: 240px;
+}
+.right {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
