--- a/micro-app-react/src/App.less
+++ b/micro-app-react/src/App.less
@@ -5,3 +5,15 @@
 body {
   background-color: aquamarine;
 }
+
+html {
+  background-color: bisque;
+}
+
+html body{
+  color: red;
+}
+
+body div{
+  font-size: 20px;
+}
