add loadApp example

--- a/micro-app-react/src/App.less
+++ b/micro-app-react/src/App.less
@@ -2,18 +2,18 @@
   display: flex;
 }
 
-body {
-  background-color: aquamarine;
-}
+// body {
+//   background-color: aquamarine;
+// }
 
-html {
-  background-color: bisque;
-}
+// html {
+//   background-color: bisque;
+// }
 
-html body{
-  color: red;
-}
+// html body{
+//   color: red;
+// }
 
-body div{
-  font-size: 20px;
-}
+// body div{
+//   font-size: 20px;
+// }
